<resources>
    <string name="app_name" translatable="false">IGTV Saver</string>
    <string name="proximadev" translatable="false">\u00A9 ProximaDev Team %1d</string>
    <string name="version">Version: %1s</string>
    <string name="welcome_text">Welcome to</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Close</string>
    <string name="no_connection">Seems you are not connected, please check your internet connection!</string>
    <string name="connection">Internet Connection</string>
    <string name="correct_url">Please copy a correct instagram Link</string>
    <string name="correct_url_title">Not Instagram Link?</string>
    <string name="profile_link">Not a Profile Link?</string>
    <string name="profile_link_content">Are you sure you copied profile link?</string>
    <string name="error">Failed to download</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="share_link">Share Link</string>
    <string name="downloading">Downloading</string>
    <string name="please_wait">Please Wait</string>
    <string name="ad_unit1" translatable="false">ca-app-pub-3836303927954880/2915616228</string>
    <string name="ad_unit2" translatable="false">ca-app-pub-3836303927954880/1847266500</string>
    <string name="ad_unit3" translatable="false">ca-app-pub-3836303927954880/1590540199</string>
    <string name="guide">Guide</string>
    <string name="guide_description">Copy link from instagram, then click on this button, to watch and download.</string>
    <string name="no_copy">You have\'t copy any link yet!</string>
    <string name="no_copy_title">No Link!?</string>
    <string name="clipboard_error">Error, can\'t read clipboard data!, copy link first, restart the app and try again!</string>
    <string name="hello">Hello There!</string>
    <string name="just">Just copy "<b>"a link from Instagram"</b>" and "<b>"click"</b>" on the play button</string>
    <string name="just_stories">For instagram stories just copy a <b>profile link</b> from Instagram and then <b>Keep Holding!!</b> on the play button</string>
    <string name="fast_link">Fast Link Service</string>
    <string name="auto_link">*Auto check instagram links when you are not using the app</string>
    <string name="link_founded">Instagram Link</string>
    <string name="link_download">Instagram Link saved, Click here to open the app</string>
    <string name="no_video">Are you sure you copied the right link?</string>
    <string name="no_video_title">Not Found!?</string>
    <string name="clipboard_error_title">Clipboard Data</string>
    <string name="cant_copy">Sorry, failed at coping link</string>
    <string name="copy_link">Copy Link</string>
    <string name="download">Download</string>
    <string name="full_size">Click on The Picture, Video to open it in fullsize</string>
    <string name="no_stories_title">No Stories</string>
    <string name="no_stories">Can\'t find any stories, is this a private account?</string>
</resources>
